--- a/index.html
+++ b/index.html
@@ -287,30 +287,30 @@
 
  <div id="easter-egg">
     <div class="menu" id="menu">
-      <h1>Welcome to 1066 Time Portal 🏰</h1>
+      <h1 style="color: white;">Welcome to 1066 Time Portal 🏰</h1>
       <button onclick="showFeature('musical')">🎭 1066: The Musical</button>
       <button onclick="showFeature('quiz')">🧠 Quickfire Quiz Duel</button>
       <button onclick="showFeature('graffiti')">🎨 Tapestry Graffiti Wall</button>
-      <button onclick="showFeature('doc')">🎥 Documentary Intro Spoof</button>
+      <button onclick="showFeature('doc')">🎥 Mini Documentary</button>
     </div>
     <div class="feature" id="musical">
       <h2>1066: The Musical</h2>
-      <p>🎵 Singing Normans, dramatic scenes and saxons with soul! 🎶</p>
+      <p style="color: white;">🎵 Singing Normans, dramatic scenes and saxons with soul! 🎶</p>
       <audio controls autoplay loop>
         <source src="https://cdn.pixabay.com/audio/2023/06/28/audio_beddb6676b.mp3" type="audio/mp3">
       </audio>
     </div>
     <div class="feature" id="quiz">
-      <h2>Quickfire Quiz Duel</h2>
+      <h2 style="color: white;">Quickfire Quiz Duel</h2>
       <p>(Placeholder: real quiz to come!)</p>
     </div>
     <div class="feature" id="graffiti">
-      <h2>Tapestry Graffiti Wall</h2>
+      <h2 style="color: white;">Tapestry Graffiti Wall</h2>
       <canvas id="graffitiCanvas" width="800" height="400" style="border:2px solid white; background: url('https://upload.wikimedia.org/wikipedia/commons/b/b4/Bayeux_Tapestry_scene49.jpg') no-repeat center/cover;"></canvas>
     </div>
     <div class="feature" id="doc">
-      <h2>Documentary Intro Spoof</h2>
-      <p>"In the year 1066, everything changed..."</p>
+      <h2 style="color: white;">Documentary Intro Spoof</h2>
+      <p style="color: white;">"In the year 1066, everything changed..."</p>
       <audio controls autoplay loop>
         <source src="https://cdn.pixabay.com/audio/2023/07/30/audio_4e04f31a7e.mp3" type="audio/mp3">
       </audio>
