--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       <button onclick="showFeature('quiz')">🧠 Quickfire Quiz Duel</button>
       <button onclick="showFeature('graffiti')">🎨 Tapestry Graffiti Wall</button>
       <button onclick="showFeature('doc')">🎥 Mini Documentary</button>
-      <button onclick="closeEasterEgg()">Close</button>
+      <button onclick="closeEasterEgg()">❌</button>
     </div>
 
     <div class="feature" id="musical">
