--- a/index.html
+++ b/index.html
@@ -314,6 +314,10 @@
     </section>
   </div>
 
+  <div class="footer">
+
+    <p>©️ 2025 History Magazine. Website by Noah MD & Luca Smith.</p>
+
   <div id="easter-egg">
     <div class="menu" id="menu">
       <h1 style="color: white;">Welcome to 1066 Time Portal 🏰</h1>
@@ -356,6 +360,8 @@
       </video>
     </div>
   </div>
+
+
 
   <script>
    let secretCode = "1066";
