--- a/index.html
+++ b/index.html
@@ -269,6 +269,11 @@
   to { opacity: 0; }
 }
 
+    .footer {
+      background-color: black; /* black background */
+      color: white;              /* white text */
+      padding: 20px;
+      text-align: center;
     
   </style>
 </head>
@@ -314,9 +319,13 @@
     </section>
   </div>
 
-  <div class="footer">
+  <footer>
 
     <p>©️ 2025 History Magazine. Website by Noah MD & Luca Smith.</p>
+
+    <p>Type 1066 and see what happens 😉</p>
+
+  </footer>
 
   <div id="easter-egg">
     <div class="menu" id="menu">
