--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 }
 
     .footer {
-      background-color: black; /* black background */
+      background-color: #000000 /* black background */
       color: white;              /* white text */
       padding: 20px;
       text-align: center;
