--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   to { opacity: 0; }
 }
 
-    .footer {
+    footer {
       background-color: #000000 /* black background */
       color: white;              /* white text */
       padding: 20px;
