--- a/index.html
+++ b/index.html
@@ -3,328 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+<link rel="stylesheet" type="text/css" href="style.css" />
+  
   <title>RGS History Magazine</title>
-  <style>
-
-    body {
-      margin: 0;
-      font-family: "Times New Roman", serif;
-    }
-
-    /* 🔔 Announcement Bar */
-    .announcement {
-      background-color: gold;
-      color: black;
-      text-align: center;
-      padding: 10px 0;
-      font-weight: bold;
-      animation: slideDown 1s ease-out;
-    }
-
-    @keyframes slideDown {
-      from {
-        transform: translateY(-100%);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    /* 🧭 Navigation Bar */
-    .nav-bar {
-      background-color: #222;
-      color: white;
-      padding: 15px 60px;
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    .nav-bar ul {
-      list-style: none;
-      display: flex;
-      gap: 25px;
-      margin: 0;
-      padding: 0;
-    }
-
-    .nav-bar ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    .nav-bar ul li a:hover {
-      color: gold;
-    }
-
-    /*Banner */
-    header {
-      background-color: royalblue;
-      color: white;
-       min-height: 400px; /* Makes banner longer vertically */
-      padding: 40px 60px; /* Less side-padding */
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .banner-content {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-    }
-
-    .text-section {
-      max-width: 50%;
-    }
-
-    .text-section h1 {
-      font-size: 60px;
-      margin: 0;
-    }
-
-    .image-section img {
-      width: 350px;
-      border-radius: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .nav-bar {
-        justify-content: center;
-      }
-
-      header {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .banner-content {
-        flex-direction: column;
-      }
-
-      .text-section, .image-section {
-        max-width: 100%;
-      }
-
-      .image-section img {
-        width: 80%;
-        margin-top: 20px;
-      }
-    }
-
-    .history-section {
-            margin: 2rem;
-            padding: 2rem;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .section-title {
-            font-size: 2rem;
-            color: #003366;
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-
-        /* Styling for individual history events */
-        .history-item {
-            background-color: #FFFAF0; /* Light yellow */
-            margin-bottom: 1.5rem;
-            padding: 1rem;
-            border-left: 5px solid #003366;
-            border-radius: 8px;
-        }
-
-        .event-title {
-            font-size: 1.5rem;
-            color: #003366;
-        }
-
-        .event-description {
-            font-size: 1rem;
-            color: #333;
-        }
-
-        /* Styling for the dynamic content container */
-        #history-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-    .poll-section {
-      text-align: center;
-    }
-
-    .announcement-bar {
-      width: 100%;
-      padding: 10px 0;
-      text-align: center;
-      font-size: 1rem;
-      font-weight: bold;
-      color: white;
-      background: linear-gradient(270deg, #00c851, #33b5e5, #007e33, #00c851);
-      background-size: 600% 600%;
-      animation: gradientAnimation 12s ease infinite;
-    }
-
-    @keyframes gradientAnimation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-  #easter-egg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Bayeux_Tapestry_scene55_Harold_death.jpg/1200px-Bayeux_Tapestry_scene55_Harold_death.jpg') no-repeat center center/cover;
-      z-index: 9999;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      backdrop-filter: blur(5px);
-    }
-    .menu {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
-      text-align: center;
-      animation: fadeIn 1s ease;
-    }
-    .menu h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-    }
-    .menu button {
-      display: block;
-      margin: 10px auto;
-      padding: 15px 30px;
-      font-size: 1.2em;
-      background: #ffdd57;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .menu button:hover {
-      background: #ffe97d;
-    }
-    .feature {
-      display: none;
-      animation: fadeIn 1s ease forwards;
-      max-width: 90vw;
-      max-height: 90vh;
-      overflow: auto;
-      background: rgba(0, 0, 0, 0.9);
-      border-radius: 20px;
-      padding: 20px;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    .menu {
-  background: rgba(0, 0, 0, 0.8);
-  padding: 30px;
-  border-radius: 15px;
-  box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
-  text-align: center;
-  transition: opacity 0.5s ease-in-out;
-  animation: fadeIn 1s ease;
-  opacity: 1;
-}
-
-.feature {
-  opacity: 1;
-  display: none;
-  animation: fadeIn 1s ease;
-  max-width: 90vw;
-  max-height: 90vh;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.9);
-  border-radius: 20px;
-  padding: 20px;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
-
-@keyframes fadeOut {
-  from { opacity: 1; }
-  to { opacity: 0; }
-}
-
-    footer {
-      background-color: #000000 /* black background */
-      color: white;              /* white text */
-      padding: 20px;
-      text-align: center;
-
-      .insta-profiles {
-  padding: 2rem;
-  background: #fafafa;
-  text-align: center;
-}
-
-.insta-profiles h2 {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-}
-
-.profile-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 1.5rem;
-}
-
-.profile-card {
-  background: white;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  text-decoration: none;
-  color: black;
-  padding: 1rem;
-  transition: transform 0.2s ease;
-}
-
-.profile-card:hover {
-  transform: scale(1.05);
-}
-
-.profile-card img {
-  width: 100%;
-  height: 180px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.profile-card h3 {
-  margin: 0.5rem 0 0.2rem;
-  font-size: 1.1rem;
-}
-
-.profile-card p {
-  font-size: 0.9rem;
-  color: #555;
-}
-
-    
-  </style>
+  
 </head>
 <body>
 
