--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </div>
 
 
-  //* SOCIAL MEDIA PROFILES *//
+  <! -- SOCIAL MEDIA PROFILES -->
+
   
   <section class="insta-profiles">
   <h2>📸 Time Travelers' Feed</h2>
@@ -80,7 +81,7 @@
 </section>
 
 
-  //* FOOTER *//
+ <!-- FOOTER -->
 
   <footer>
 
