--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
 }
 
     footer {
-      background-color: #000000 /* black background */
+      background-color: #000000; /* black background */
       color: white;              /* white text */
       padding: 20px;
       text-align: center;
+    }
 
       .insta-profiles {
   padding: 2rem;
