--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <h2>📸 Time Travelers' Feed</h2>
   <div class="profile-grid">
     <a href="profile-cleopatra.html" class="profile-card">
-      <img src="images/cleopatra.jpg" alt="Cleopatra">
+      <img src="ai-generated-8662138_1280.jpg" alt="Cleopatra">
       <h3>Cleopatra VII</h3>
       <p>@queenofthenile</p>
     </a>
